// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalCard matches the visual baseline for a pending proposal without votes 1`] = `
{
  "attrs": {
    "href": "/proposals/QIP-007",
  },
  "children": [
    {
      "attrs": {
        "class": "p-5 rounded-xl bg-[#0d1520] border border-[#1a2535] hover:border-blue-700/70 focus-visible:border-blue-700/70 hover:shadow-lg focus-visible:shadow-lg hover:shadow-blue-900/20 focus-visible:shadow-blue-900/20 transition-all group cursor-pointer",
      },
      "children": [
        {
          "attrs": {
            "class": "flex items-start justify-between gap-3 mb-3",
          },
          "children": [
            {
              "attrs": {
                "class": "flex items-center gap-2 flex-wrap",
              },
              "children": [
                {
                  "attrs": {
                    "class": "inline-flex items-center gap-1.5 text-xs font-semibold px-2.5 py-1 rounded-full bg-amber-900/50 text-amber-300 border border-amber-700",
                  },
                  "children": [
                    "Pending",
                  ],
                  "tag": "span",
                },
                {
                  "attrs": {
                    "class": "text-xs px-2 py-0.5 rounded-full bg-[#162032] text-slate-400 border border-[#1e2d40]",
                  },
                  "children": [
                    "Governance",
                  ],
                  "tag": "span",
                },
              ],
              "tag": "div",
            },
            {
              "attrs": {
                "class": "text-xs text-slate-500 shrink-0",
              },
              "children": [
                "QIP-007",
              ],
              "tag": "span",
            },
          ],
          "tag": "div",
        },
        {
          "attrs": {
            "class": "font-semibold text-slate-100 group-hover:text-blue-300 group-focus-visible:text-blue-300 transition-colors mb-2 leading-snug",
          },
          "children": [
            "Reduce Quorum Threshold to 4%",
          ],
          "tag": "h3",
        },
        {
          "attrs": {
            "class": "text-xs text-slate-500 mb-4",
          },
          "children": [
            "Proposed by",
            {
              "attrs": {
                "title": "GCOMM...7RST",
              },
              "children": [
                "GCOMM...7RST",
              ],
              "tag": "span",
            },
            "·",
            {
              "attrs": {
                "title": "Jun 11, 2026, 12:00 AM UTC",
              },
              "children": [
                "Ends in 10 days",
              ],
              "tag": "time",
            },
          ],
          "tag": "p",
        },
        {
          "attrs": {
            "class": "h-1.5 rounded-full bg-[#1a2535] w-full",
          },
          "children": [],
          "tag": "div",
        },
        {
          "attrs": {
            "class": "mt-2",
          },
          "children": [
            {
              "attrs": {
                "aria-label": "Quorum",
                "class": "h-1.5 bg-[#1a2535] rounded-full overflow-hidden",
                "role": "progressbar",
              },
              "children": [
                {
                  "attrs": {
                    "class": "h-full rounded-full transition-all bg-slate-600",
                  },
                  "children": [],
                  "style": {
                    "width": "0%",
                  },
                  "tag": "div",
                },
              ],
              "tag": "div",
            },
            {
              "attrs": {
                "class": "flex items-center gap-1 mt-1.5 text-xs text-amber-400",
              },
              "children": [
                {
                  "attrs": {},
                  "children": [
                    "0% of quorum",
                  ],
                  "tag": "span",
                },
              ],
              "tag": "div",
            },
          ],
          "tag": "div",
        },
      ],
      "tag": "div",
    },
  ],
  "tag": "a",
}
`;

exports[`ProposalCard matches the visual baseline for a proposal still short of quorum 1`] = `
{
  "attrs": {
    "href": "/proposals/QIP-009",
  },
  "children": [
    {
      "attrs": {
        "class": "p-5 rounded-xl bg-[#0d1520] border border-[#1a2535] hover:border-blue-700/70 focus-visible:border-blue-700/70 hover:shadow-lg focus-visible:shadow-lg hover:shadow-blue-900/20 focus-visible:shadow-blue-900/20 transition-all group cursor-pointer",
      },
      "children": [
        {
          "attrs": {
            "class": "flex items-start justify-between gap-3 mb-3",
          },
          "children": [
            {
              "attrs": {
                "class": "flex items-center gap-2 flex-wrap",
              },
              "children": [
                {
                  "attrs": {
                    "class": "inline-flex items-center gap-1.5 text-xs font-semibold px-2.5 py-1 rounded-full bg-blue-900/50 text-blue-300 border border-blue-700",
                  },
                  "children": [
                    {
                      "attrs": {
                        "class": "w-1.5 h-1.5 rounded-full bg-blue-400 animate-pulse",
                      },
                      "children": [],
                      "tag": "span",
                    },
                    "Active",
                  ],
                  "tag": "span",
                },
                {
                  "attrs": {
                    "class": "text-xs px-2 py-0.5 rounded-full bg-[#162032] text-slate-400 border border-[#1e2d40]",
                  },
                  "children": [
                    "Financial",
                  ],
                  "tag": "span",
                },
              ],
              "tag": "div",
            },
            {
              "attrs": {
                "class": "text-xs text-slate-500 shrink-0",
              },
              "children": [
                "QIP-009",
              ],
              "tag": "span",
            },
          ],
          "tag": "div",
        },
        {
          "attrs": {
            "class": "font-semibold text-slate-100 group-hover:text-blue-300 group-focus-visible:text-blue-300 transition-colors mb-2 leading-snug",
          },
          "children": [
            "Fund the Documentation Rewrite",
          ],
          "tag": "h3",
        },
        {
          "attrs": {
            "class": "text-xs text-slate-500 mb-4",
          },
          "children": [
            "Proposed by",
            {
              "attrs": {
                "title": "GABC...3XZK",
              },
              "children": [
                "GABC...3XZK",
              ],
              "tag": "span",
            },
            "·",
            {
              "attrs": {
                "title": "Jun 6, 2026, 12:00 AM UTC",
              },
              "children": [
                "Ends in 5 days",
              ],
              "tag": "time",
            },
          ],
          "tag": "p",
        },
        {
          "attrs": {
            "class": "flex flex-col gap-1.5",
          },
          "children": [
            {
              "attrs": {
                "class": "flex h-1.5 rounded-full overflow-hidden gap-px",
              },
              "children": [
                {
                  "attrs": {
                    "class": "bg-emerald-500 rounded-l-full",
                  },
                  "children": [],
                  "style": {
                    "width": "66.66666666666666%",
                  },
                  "tag": "div",
                },
                {
                  "attrs": {
                    "class": "bg-red-500",
                  },
                  "children": [],
                  "style": {
                    "width": "22.22222222222222%",
                  },
                  "tag": "div",
                },
                {
                  "attrs": {
                    "class": "bg-slate-500 rounded-r-full",
                  },
                  "children": [],
                  "style": {
                    "width": "11.11111111111111%",
                  },
                  "tag": "div",
                },
              ],
              "tag": "div",
            },
          ],
          "tag": "div",
        },
        {
          "attrs": {
            "class": "flex gap-4 mt-2 text-xs text-slate-500",
          },
          "children": [
            {
              "attrs": {
                "class": "text-emerald-400",
              },
              "children": [
                "120K For",
              ],
              "tag": "span",
            },
            {
              "attrs": {
                "class": "text-red-400",
              },
              "children": [
                "40K Against",
              ],
              "tag": "span",
            },
          ],
          "tag": "div",
        },
        {
          "attrs": {
            "class": "mt-2",
          },
          "children": [
            {
              "attrs": {
                "aria-label": "Quorum",
                "class": "h-1.5 bg-[#1a2535] rounded-full overflow-hidden",
                "role": "progressbar",
              },
              "children": [
                {
                  "attrs": {
                    "class": "h-full rounded-full transition-all bg-amber-500",
                  },
                  "children": [],
                  "style": {
                    "width": "36%",
                  },
                  "tag": "div",
                },
              ],
              "tag": "div",
            },
            {
              "attrs": {
                "class": "flex items-center gap-1 mt-1.5 text-xs text-amber-400",
              },
              "children": [
                {
                  "attrs": {},
                  "children": [
                    "36% of quorum",
                  ],
                  "tag": "span",
                },
              ],
              "tag": "div",
            },
          ],
          "tag": "div",
        },
      ],
      "tag": "div",
    },
  ],
  "tag": "a",
}
`;

exports[`ProposalCard matches the visual baseline for a proposal that has ended 1`] = `
{
  "attrs": {
    "href": "/proposals/QIP-002",
  },
  "children": [
    {
      "attrs": {
        "class": "p-5 rounded-xl bg-[#0d1520] border border-[#1a2535] hover:border-blue-700/70 focus-visible:border-blue-700/70 hover:shadow-lg focus-visible:shadow-lg hover:shadow-blue-900/20 focus-visible:shadow-blue-900/20 transition-all group cursor-pointer",
      },
      "children": [
        {
          "attrs": {
            "class": "flex items-start justify-between gap-3 mb-3",
          },
          "children": [
            {
              "attrs": {
                "class": "flex items-center gap-2 flex-wrap",
              },
              "children": [
                {
                  "attrs": {
                    "class": "inline-flex items-center gap-1.5 text-xs font-semibold px-2.5 py-1 rounded-full bg-green-900/50 text-green-300 border border-green-700",
                  },
                  "children": [
                    "Passed",
                  ],
                  "tag": "span",
                },
                {
                  "attrs": {
                    "class": "text-xs px-2 py-0.5 rounded-full bg-[#162032] text-slate-400 border border-[#1e2d40]",
                  },
                  "children": [
                    "Financial",
                  ],
                  "tag": "span",
                },
              ],
              "tag": "div",
            },
            {
              "attrs": {
                "class": "text-xs text-slate-500 shrink-0",
              },
              "children": [
                "QIP-002",
              ],
              "tag": "span",
            },
          ],
          "tag": "div",
        },
        {
          "attrs": {
            "class": "font-semibold text-slate-100 group-hover:text-blue-300 group-focus-visible:text-blue-300 transition-colors mb-2 leading-snug",
          },
          "children": [
            "Add USDC as Accepted Collateral",
          ],
          "tag": "h3",
        },
        {
          "attrs": {
            "class": "text-xs text-slate-500 mb-4",
          },
          "children": [
            "Proposed by",
            {
              "attrs": {
                "title": "GABC...3XZK",
              },
              "children": [
                "GABC...3XZK",
              ],
              "tag": "span",
            },
            "·",
            {
              "attrs": {
                "title": "May 29, 2026, 12:00 AM UTC",
              },
              "children": [
                "Ended 3 days ago",
              ],
              "tag": "time",
            },
          ],
          "tag": "p",
        },
        {
          "attrs": {
            "class": "flex flex-col gap-1.5",
          },
          "children": [
            {
              "attrs": {
                "class": "flex h-1.5 rounded-full overflow-hidden gap-px",
              },
              "children": [
                {
                  "attrs": {
                    "class": "bg-emerald-500 rounded-l-full",
                  },
                  "children": [],
                  "style": {
                    "width": "60%",
                  },
                  "tag": "div",
                },
                {
                  "attrs": {
                    "class": "bg-red-500",
                  },
                  "children": [],
                  "style": {
                    "width": "30%",
                  },
                  "tag": "div",
                },
                {
                  "attrs": {
                    "class": "bg-slate-500 rounded-r-full",
                  },
                  "children": [],
                  "style": {
                    "width": "10%",
                  },
                  "tag": "div",
                },
              ],
              "tag": "div",
            },
          ],
          "tag": "div",
        },
        {
          "attrs": {
            "class": "flex gap-4 mt-2 text-xs text-slate-500",
          },
          "children": [
            {
              "attrs": {
                "class": "text-emerald-400",
              },
              "children": [
                "600K For",
              ],
              "tag": "span",
            },
            {
              "attrs": {
                "class": "text-red-400",
              },
              "children": [
                "300K Against",
              ],
              "tag": "span",
            },
          ],
          "tag": "div",
        },
        {
          "attrs": {
            "class": "mt-2",
          },
          "children": [
            {
              "attrs": {
                "aria-label": "Quorum",
                "class": "h-1.5 bg-[#1a2535] rounded-full overflow-hidden",
                "role": "progressbar",
              },
              "children": [
                {
                  "attrs": {
                    "class": "h-full rounded-full transition-all bg-emerald-500",
                  },
                  "children": [],
                  "style": {
                    "width": "100%",
                  },
                  "tag": "div",
                },
              ],
              "tag": "div",
            },
            {
              "attrs": {
                "class": "flex items-center gap-1 mt-1.5 text-xs text-emerald-400",
              },
              "children": [
                {
                  "attrs": {},
                  "children": [],
                  "tag": "svg",
                },
                {
                  "attrs": {},
                  "children": [
                    "Quorum reached",
                  ],
                  "tag": "span",
                },
              ],
              "tag": "div",
            },
          ],
          "tag": "div",
        },
      ],
      "tag": "div",
    },
  ],
  "tag": "a",
}
`;

exports[`ProposalCard matches the visual baseline for an active proposal with votes 1`] = `
{
  "attrs": {
    "href": "/proposals/QIP-001",
  },
  "children": [
    {
      "attrs": {
        "class": "p-5 rounded-xl bg-[#0d1520] border border-[#1a2535] hover:border-blue-700/70 focus-visible:border-blue-700/70 hover:shadow-lg focus-visible:shadow-lg hover:shadow-blue-900/20 focus-visible:shadow-blue-900/20 transition-all group cursor-pointer",
      },
      "children": [
        {
          "attrs": {
            "class": "flex items-start justify-between gap-3 mb-3",
          },
          "children": [
            {
              "attrs": {
                "class": "flex items-center gap-2 flex-wrap",
              },
              "children": [
                {
                  "attrs": {
                    "class": "inline-flex items-center gap-1.5 text-xs font-semibold px-2.5 py-1 rounded-full bg-blue-900/50 text-blue-300 border border-blue-700",
                  },
                  "children": [
                    {
                      "attrs": {
                        "class": "w-1.5 h-1.5 rounded-full bg-blue-400 animate-pulse",
                      },
                      "children": [],
                      "tag": "span",
                    },
                    "Active",
                  ],
                  "tag": "span",
                },
                {
                  "attrs": {
                    "class": "text-xs px-2 py-0.5 rounded-full bg-[#162032] text-slate-400 border border-[#1e2d40]",
                  },
                  "children": [
                    "Financial",
                  ],
                  "tag": "span",
                },
              ],
              "tag": "div",
            },
            {
              "attrs": {
                "class": "text-xs text-slate-500 shrink-0",
              },
              "children": [
                "QIP-001",
              ],
              "tag": "span",
            },
          ],
          "tag": "div",
        },
        {
          "attrs": {
            "class": "font-semibold text-slate-100 group-hover:text-blue-300 group-focus-visible:text-blue-300 transition-colors mb-2 leading-snug",
          },
          "children": [
            "Increase Protocol Fee to 0.05%",
          ],
          "tag": "h3",
        },
        {
          "attrs": {
            "class": "text-xs text-slate-500 mb-4",
          },
          "children": [
            "Proposed by",
            {
              "attrs": {
                "title": "GABC...3XZK",
              },
              "children": [
                "GABC...3XZK",
              ],
              "tag": "span",
            },
            "·",
            {
              "attrs": {
                "title": "Jun 6, 2026, 12:00 AM UTC",
              },
              "children": [
                "Ends in 5 days",
              ],
              "tag": "time",
            },
          ],
          "tag": "p",
        },
        {
          "attrs": {
            "class": "flex flex-col gap-1.5",
          },
          "children": [
            {
              "attrs": {
                "class": "flex h-1.5 rounded-full overflow-hidden gap-px",
              },
              "children": [
                {
                  "attrs": {
                    "class": "bg-emerald-500 rounded-l-full",
                  },
                  "children": [],
                  "style": {
                    "width": "60%",
                  },
                  "tag": "div",
                },
                {
                  "attrs": {
                    "class": "bg-red-500",
                  },
                  "children": [],
                  "style": {
                    "width": "30%",
                  },
                  "tag": "div",
                },
                {
                  "attrs": {
                    "class": "bg-slate-500 rounded-r-full",
                  },
                  "children": [],
                  "style": {
                    "width": "10%",
                  },
                  "tag": "div",
                },
              ],
              "tag": "div",
            },
          ],
          "tag": "div",
        },
        {
          "attrs": {
            "class": "flex gap-4 mt-2 text-xs text-slate-500",
          },
          "children": [
            {
              "attrs": {
                "class": "text-emerald-400",
              },
              "children": [
                "600K For",
              ],
              "tag": "span",
            },
            {
              "attrs": {
                "class": "text-red-400",
              },
              "children": [
                "300K Against",
              ],
              "tag": "span",
            },
          ],
          "tag": "div",
        },
        {
          "attrs": {
            "class": "mt-2",
          },
          "children": [
            {
              "attrs": {
                "aria-label": "Quorum",
                "class": "h-1.5 bg-[#1a2535] rounded-full overflow-hidden",
                "role": "progressbar",
              },
              "children": [
                {
                  "attrs": {
                    "class": "h-full rounded-full transition-all bg-emerald-500",
                  },
                  "children": [],
                  "style": {
                    "width": "100%",
                  },
                  "tag": "div",
                },
              ],
              "tag": "div",
            },
            {
              "attrs": {
                "class": "flex items-center gap-1 mt-1.5 text-xs text-emerald-400",
              },
              "children": [
                {
                  "attrs": {},
                  "children": [],
                  "tag": "svg",
                },
                {
                  "attrs": {},
                  "children": [
                    "Quorum reached",
                  ],
                  "tag": "span",
                },
              ],
              "tag": "div",
            },
          ],
          "tag": "div",
        },
      ],
      "tag": "div",
    },
  ],
  "tag": "a",
}
`;
